# llm-wiki

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/csv_to_markdown/: .hf-skill-manifest.json  README.md  SKILL.md  main.py
.github/excel_to_markdown/: README.md  SKILL.md  main.py
.github/url_to_pdf/: .hf-skill-manifest.json  README.md  SKILL.md  main.py
.obsidian/: graph.json  workspace.json
processed/csvs/: sample.csv
scripts/: excel_to_markdown_agent.py
tests/: conftest.py  create_fixtures.py  test_embeddings.py  test_ingest.py  test_pdf_adapter.py  test_pipeline.py  test_wiki_writer.py
tests/fixtures/: sample.csv  sample.json  sample.tsv  sample.xlsx
wiki/: BROKENLINK.md  CHANGELOG.md  INDEX.md
wiki/ai/: agentic-skills.md  agi-definition.md  anthropic-agent-skills.md  attention-mechanism.md  bert.md  capability-contortions.md  cognitive-capabilities-framework.md  context.md  emergent-abilities.md  foundation-models.md  gpt-3.md  hallucination.md  in-context-learning.md  instructgpt.md  large-language-models.md  long-term-memory-in-ai.md  masked-language-modeling.md  mcp-security-threats.md  model-context-protocol.md  pretraining-and-finetuning.md  rag-paradigms.md  retrieval-augmented-generation.md  rlhf-and-alignment.md  scaling-laws.md  skill-design-patterns.md  skill-lifecycle.md  skill-security-governance.md  skills-evaluation.md  transformer-architecture.md  vector-databases-and-embeddings.md
wiki_engine/: cli.py  config.py  csv_to_markdown.py  excel_to_markdown.py  pipeline.py  url_to_pdf.py  watcher.py
(+63 files in other folders)
