[project]
name = "llm-wiki"
version = "0.1.0"
description = "Auto-evolving wiki system powered by Claude"
requires-python = ">=3.11"

dependencies = [
    "anthropic>=0.39.0",
    "typer>=0.12.0",
    "watchdog>=4.0.0",
    "openpyxl>=3.1.2",
    "xlrd>=2.0.1",
    "sentence-transformers>=3.0.0",
    "torch>=2.2.0",
    "chromadb>=0.5.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "pdfplumber>=0.11.9",
]

[project.scripts]
wiki = "wiki_engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wiki_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "fpdf2>=2.8.7",
    "pytest>=9.0.3",
]
